[project]
name = "libsql-sqlalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libsql-experimental>=0.0.47",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
]

[project.entry-points."sqlalchemy.dialects"]
"sqlite.libsql" = "libsql_sqlalchemy:SQLiteDialect_libsql"