[project]
name = "sqlalchemy-turso"
version = "0.2.0"
description = "SQLAlchemy dialect for Turso"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Levy Albuquerque", email = "levy@turso.tech" },
]
keywords = ["sqlalchemy", "turso", "database", "dialect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "pyturso>=0.1.4",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/tursodatabase/libsql-sqlalchemy"
Documentation = "https://github.com/tursodatabase/libsql-sqlalchemy#readme"
Repository = "https://github.com/tursodatabase/libsql-sqlalchemy.git"
Issues = "https://github.com/tursodatabase/libsql-sqlalchemy/issues"

[project.entry-points."sqlalchemy.dialects"]
"sqlite.turso" = "sqlalchemy_turso:SQLiteDialect_turso"
"sqlite.aioturso" = "sqlalchemy_turso:SQLiteDialect_aioturso"
